Align the password character validation message in the change password screen issue fix. @0045904

--- a/symfony/plugins/orangehrmSecurityAuthenticationPlugin/web/css/passwordStrength.css
+++ b/symfony/plugins/orangehrmSecurityAuthenticationPlugin/web/css/passwordStrength.css
@@ -26,3 +26,7 @@
     width: 25%;
     padding-left: 400px;
 }
+
+#changeWeakPassword_newPassword_help_text{
+    width: 250px;
+}
